--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "morgan": "^1.9.0",
